--- a/src/app/components/sidebar/sidebar.html
+++ b/src/app/components/sidebar/sidebar.html
@@ -21,13 +21,13 @@ Overlay
   </div>
 
   <!-- User Info -->
-  <div class="flex items-center gap-3 pb-4 mb-2 px-4 border-b border-gray-200">
+  <!-- <div class="flex items-center gap-3 pb-4 mb-2 px-4 border-b border-gray-200">
     <div class="w-10 h-10 bg-pro text-white rounded-full flex items-center justify-center">D</div>
     <div>
       <h4 class="text-lg text-gray-600">Dr. Sarah Johnson</h4>
       <div class="text-white bg-pro rounded-lg px-2 p-1 w-fit text-xs">admin</div>
     </div>
-  </div>
+  </div> -->
 
   <!-- Links -->
 <ul class="flex-1 px-2 overflow-y-auto">
