--- a/src/app/components/levels/levels.html
+++ b/src/app/components/levels/levels.html
@@ -76,7 +76,7 @@
       <div class="flex gap-2 self-end">
         <button
           (click)="refreshData()"
-          class="cursor-pointer flex items-center gap-2 px-4 py-3 border border-gray-300 rounded-xl  bg-pro2 text-sm font-medium text-pro"
+          class="cursor-pointer bg-gray-100 hover:bg-gray-200 transition-colors duration-300 flex items-center gap-2 px-4 py-3 rounded-xl hover:border-pro hover:bg-pro/5 text-sm font-medium text-pro"
           title="Refresh Data"
         >
           <i class="fas fa-sync-alt text-xs "[class.animate-spin]="loading"></i>
