--- a/src/app/pages/users/users.html
+++ b/src/app/pages/users/users.html
@@ -7,7 +7,7 @@
     </div>
     <button
       (click)="addUser()"
-      class="bg-pro text-white px-4 py-2 rounded-lg hover:bg-pro-hover transition cursor-pointer"
+      class="bg-[#0F7B8A] cursor-pointer text-white px-4 py-2 rounded-lg transition hover:bg-[#0c656c] disabled:opacity-50 disabled:cursor-not-allowed font-medium transition-color duration-300"
     >
       + Add User
     </button>
@@ -122,7 +122,7 @@
       <div class="flex gap-2 self-end">
         <button
           (click)="refreshData()"
-          class="flex items-center gap-2 px-4 py-3 border border-none rounded-xl hover:border-teal-700 hover:bg-green-500/5 text-sm font-medium text-gray-600"
+          class="cursor-pointer bg-gray-100 hover:bg-gray-200 transition-colors duration-300 flex items-center gap-2 px-4 py-3    rounded-xl hover:border-pro hover:bg-pro/5 text-sm font-medium text-pro"
           title="Refresh Data"
         >
           <i class="fas fa-sync-alt text-xs"></i>
@@ -245,13 +245,13 @@
           <td class="py-3 px-4 flex justify-center gap-2">
             <button
               (click)="editUser(user)"
-              class="text-gray-600 hover:text-pro transition px-3 py-1 rounded text-sm"
+              class="text-gray-600 hover:text-white hover:bg-[#0F7B8A] transition duration-200 px-1 py-1 rounded-lg text-sm cursor-pointer disabled:opacity-50"
             >
               <i class="fa-regular fa-pen-to-square"></i>
             </button>
             <button
               (click)="confirmDelete(user._id)"
-              class="text-red-500 hover:text-red-700 transition px-3 py-1 rounded text-sm"
+              class="text-[#E74C3C] hover:text-white hover:bg-[#E74C3C] duration-200 px-1 py-1 rounded-lg text-sm cursor-pointer  "
             >
               <i class="fa-regular fa-trash-can"></i>
             </button>
@@ -322,7 +322,7 @@
     class="fixed inset-0 bg-black/40 flex items-center justify-center z-50 backdrop-blur-sm"
   >
     <div class="bg-white p-8 rounded-2xl shadow-xl w-full max-w-2xl">
-      <h3 class="text-2xl font-semibold mb-6 text-gray-800">
+      <h3 class="text-2xl font-semibold mb-6 text-gray-700">
         {{ selectedUser ? 'Edit User' : 'Add User' }}
       </h3>
 
@@ -470,13 +470,14 @@
       <div class="flex justify-end gap-3 mt-8">
         <button
           (click)="showForm = false"
-          class="bg-white hover:bg-gray-100 text-gray-800 px-5 py-2 rounded-md border border-gray-300 transition font-medium"
+          class="bg-white hover:bg-gray-100 cursor-pointer text-gray-800 px-5 py-2 rounded-md border border-gray-300 transition font-medium transition-color duration-300"
         >
           Cancel
         </button>
         <button
           (click)="saveUser()"
-          class="bg-pro hover:bg-pro-hover text-white cursor-pointer px-5 py-2 rounded-md transition font-medium shadow-sm"
+          class="bg-[#0F7B8A] cursor-pointer text-white px-4 py-2 rounded-lg transition hover:bg-[#0c656c] disabled:opacity-50 disabled:cursor-not-allowed font-medium transition-color duration-300"
+
         >
           {{ selectedUser ? 'Update' : 'Create' }}
         </button>
@@ -490,20 +491,20 @@
     class="fixed inset-0 bg-black/40 backdrop-blur-sm flex items-center justify-center z-50"
   >
     <div class="bg-white p-8 rounded-2xl shadow-xl w-[90%] max-w-md text-center">
-      <h3 class="text-xl font-semibold text-gray-800 mb-3">Confirm Deletion</h3>
+      <h3 class="text-xl font-semibold text-gray-700 mb-3">Confirm Deletion</h3>
       <p class="text-gray-500 mb-6">Are you sure you want to delete this user?</p>
       <div class="flex justify-center gap-4">
         <button
-          (click)="deleteUserConfirmed()"
-          class="bg-red-400 hover:bg-red-700 text-white px-5 py-2 rounded-md font-medium transition"
-        >
-          Yes, Delete
-        </button>
-        <button
           (click)="cancelDelete()"
-          class="bg-gray-100 hover:bg-gray-200 text-gray-700 px-5 py-2 rounded-md font-medium transition"
+          class="bg-gray-100 hover:bg-gray-200 text-gray-700 px-5 py-2 rounded-lg font-medium transition duration-200 disabled:opacity-50 cursor-pointer"
         >
           Cancel
+        </button>
+        <button
+          (click)="deleteUserConfirmed()"
+          class="bg-red-600 hover:bg-red-700 cursor-pointer text-white px-5 py-2 rounded-lg font-medium transition duration-200 disabled:opacity-50 flex items-center gap-2"
+        >
+          Delete
         </button>
       </div>
     </div>
