--- a/src/app/components/sidebar/sidebar.html
+++ b/src/app/components/sidebar/sidebar.html
@@ -28,7 +28,7 @@
       *ngIf="screenWidth >= 1020"
     >
       <i
-        class="fa-solid text-white text-xs transition-transform duration-300"
+        class="fa-solid text-white text-xs transition-transform duration-300 cursor-pointer"
         [class.fa-chevron-left]="!isMiniSidebar"
         [class.fa-chevron-right]="isMiniSidebar"
       ></i>
